@@ -16,7 +16,6 @@
 
 package com.adobe.testing.s3mock.service;
 
-import static com.adobe.testing.s3mock.S3Exception.BUCKET_ALREADY_EXISTS;
 import static com.adobe.testing.s3mock.S3Exception.BUCKET_ALREADY_OWNED_BY_YOU;
 import static com.adobe.testing.s3mock.S3Exception.BUCKET_NOT_EMPTY;
 import static com.adobe.testing.s3mock.S3Exception.INVALID_BUCKET_NAME;
@@ -32,10 +31,12 @@ import static software.amazon.awssdk.utils.http.SdkHttpUtils.urlEncodeIgnoreSlas
 
 import com.adobe.testing.s3mock.dto.Bucket;
 import com.adobe.testing.s3mock.dto.BucketLifecycleConfiguration;
+import com.adobe.testing.s3mock.dto.Buckets;
 import com.adobe.testing.s3mock.dto.ListAllMyBucketsResult;
 import com.adobe.testing.s3mock.dto.ListBucketResult;
 import com.adobe.testing.s3mock.dto.ListBucketResultV2;
 import com.adobe.testing.s3mock.dto.ObjectLockConfiguration;
+import com.adobe.testing.s3mock.dto.Prefix;
 import com.adobe.testing.s3mock.dto.S3Object;
 import com.adobe.testing.s3mock.store.BucketMetadata;
 import com.adobe.testing.s3mock.store.BucketStore;
@@ -75,8 +76,8 @@ public class BucketService {
         .stream()
         .filter(Objects::nonNull)
         .map(Bucket::from)
-        .collect(Collectors.toList());
-    return new ListAllMyBucketsResult(DEFAULT_OWNER, buckets);
+        .toList();
+    return new ListAllMyBucketsResult(DEFAULT_OWNER, new Buckets(buckets));
   }
 
   /**
@@ -155,7 +156,7 @@ public class BucketService {
         .filter(Objects::nonNull)
         .map(S3Object::from)
         // List Objects results are expected to be sorted by key
-        .sorted(Comparator.comparing(S3Object::getKey))
+        .sorted(Comparator.comparing(S3Object::key))
         .collect(Collectors.toList());
   }
 
@@ -193,7 +194,7 @@ public class BucketService {
       nextContinuationToken = UUID.randomUUID().toString();
       contents = contents.subList(0, maxKeys);
       listObjectsPagingStateCache.put(nextContinuationToken,
-          contents.get(maxKeys - 1).getKey());
+          contents.get(maxKeys - 1).key());
     }
 
     String returnPrefix = prefix;
@@ -201,17 +202,19 @@ public class BucketService {
     List<String> returnCommonPrefixes = commonPrefixes;
 
     if (Objects.equals("url", encodingType)) {
-      contents = apply(contents, (object) -> {
-        object.setKey(urlEncodeIgnoreSlashes(object.getKey()));
-        return object;
-      });
+      contents = apply(contents, (object) -> new S3Object(urlEncodeIgnoreSlashes(object.key()),
+          object.lastModified(),
+          object.etag(),
+          object.size(),
+          object.storageClass(),
+          object.owner()));
       returnPrefix = urlEncodeIgnoreSlashes(prefix);
       returnStartAfter = urlEncodeIgnoreSlashes(startAfter);
       returnCommonPrefixes = apply(commonPrefixes, SdkHttpUtils::urlEncodeIgnoreSlashes);
     }
 
     return new ListBucketResultV2(bucketName, returnPrefix, maxKeys,
-        isTruncated, contents, returnCommonPrefixes,
+        isTruncated, contents, returnCommonPrefixes.stream().map(Prefix::new).toList(),
         continuationToken, String.valueOf(contents.size()),
         nextContinuationToken, returnStartAfter, encodingType);
   }
@@ -235,7 +238,7 @@ public class BucketService {
       contents = contents.subList(0, maxKeys);
       isTruncated = true;
       if (maxKeys > 0) {
-        nextMarker = contents.get(maxKeys - 1).getKey();
+        nextMarker = contents.get(maxKeys - 1).key();
       }
     }
 
@@ -243,16 +246,19 @@ public class BucketService {
     List<String> returnCommonPrefixes = commonPrefixes;
 
     if (Objects.equals("url", encodingType)) {
-      contents = apply(contents, (object) -> {
-        object.setKey(urlEncodeIgnoreSlashes(object.getKey()));
-        return object;
-      });
+      contents = apply(contents, (object) -> new S3Object(urlEncodeIgnoreSlashes(object.key()),
+          object.lastModified(),
+          object.etag(),
+          object.size(),
+          object.storageClass(),
+          object.owner()));
       returnPrefix = urlEncodeIgnoreSlashes(prefix);
       returnCommonPrefixes = apply(commonPrefixes, SdkHttpUtils::urlEncodeIgnoreSlashes);
     }
 
     return new ListBucketResult(bucketName, returnPrefix, marker, maxKeys, isTruncated,
-        encodingType, nextMarker, contents, returnCommonPrefixes);
+        encodingType, nextMarker, contents,
+        returnCommonPrefixes.stream().map(Prefix::new).toList());
   }
 
   public void verifyBucketExists(String bucketName) {
@@ -322,7 +328,7 @@ public class BucketService {
     String normalizedQueryPrefix = queryPrefix == null ? "" : queryPrefix;
 
     for (S3Object c : s3Objects) {
-      String key = c.getKey();
+      String key = c.key();
       if (key.startsWith(normalizedQueryPrefix)) {
         int delimiterIndex = key.indexOf(delimiter, normalizedQueryPrefix.length());
         if (delimiterIndex > 0) {
@@ -348,7 +354,7 @@ public class BucketService {
     if (isNotEmpty(startAfter)) {
       return s3Objects
           .stream()
-          .filter(p -> p.getKey().compareTo(startAfter) > 0)
+          .filter(p -> p.key().compareTo(startAfter) > 0)
           .collect(Collectors.toList());
     } else {
       return s3Objects;
@@ -362,7 +368,7 @@ public class BucketService {
           .stream()
           .filter(c -> commonPrefixes
               .stream()
-              .noneMatch(p -> c.getKey().startsWith(p))
+              .noneMatch(p -> c.key().startsWith(p))
           )
           .collect(Collectors.toList());
     } else {
